<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">إختبار الذكاء IQ</string>
    <string name="app_name_e">IQ Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="q1">السؤال الأول</string>
    <string name="q1_e">Question one</string>
    <string name="q2">السؤال الثاني</string>
    <string name="q2_e">Question 2</string>
    <string name="q3">السؤال الثالث</string>
    <string name="q3_e">Question 3</string>
    <string name="q4">السؤال الرابع</string>
    <string name="q4_e">Question 4</string>
    <string name="q5">السؤال الخامس</string>
    <string name="q5_e">Question 5</string>
    <string name="q6">السؤال السادس</string>
    <string name="q6_e">Question 6</string>
    <string name="q7">السؤال السابع</string>
    <string name="q7_e">Question 7</string>
    <string name="q8">السؤال الثامن</string>
    <string name="q8_e">Question 8</string>
    <string name="q9">السؤال التاسع</string>
    <string name="q9_e">Question 9</string>
    <string name="q10">السؤال العاشر</string>
    <string name="q10_e">Question 10</string>
    <string name="q11">السؤال الحادي عشر</string>
    <string name="q11_e">Question 11</string>
    <string name="q12">السؤال الثاني عشر</string>
    <string name="q12_e">Question 12</string>
    <string name="q13">السؤال الثالث عشر</string>
    <string name="q13_e">Question 13</string>
    <string name="q14">السؤال الرابع عشر</string>
    <string name="q14_e">Question 14</string>
    <string name="q15">السؤال الخامس عشر</string>
    <string name="q15_e">Question 15</string>
    <string name="q16">السؤال السادس عشر</string>
    <string name="q16_e">Question 16</string>
    <string name="q17">السؤال السابع عشر</string>
    <string name="q17_e">Question 17</string>
    <string name="q18">السؤال الثامن عشر</string>
    <string name="q18_e">Question 18</string>
    <string name="q19">السؤال التاسع عشر</string>
    <string name="q19_e">Question 19</string>
    <string name="q20">السؤال العشرون</string>
    <string name="q20_e">Question 20</string>
    <string name="q21">السؤال الواحد والعشرون</string>
    <string name="q21_e">Question 21</string>
    <string name="q22">السؤال الثاني والعشرون</string>
    <string name="q22_e">Question 22</string>
    <string name="q23">السؤال الثالث والعشرين</string>
    <string name="q23_e">Question 23</string>
    <string name="q24">السؤال الرابع والعشرين</string>
    <string name="q24_e">Question 24</string>
    <string name="q25">السؤال الخامس والعشرين</string>
    <string name="q25_e">Question 25</string>
    <string name="q26">السؤال السادس والعشرين</string>
    <string name="q26_e">Question 26</string>
    <string name="q27">السؤال السابع والعشرين</string>
    <string name="q27_e">Question 27</string>
    <string name="q28">السؤال الثامن والعشرين</string>
    <string name="q28_e">Question 28</string>
    <string name="q29">السؤال التاسع والعشرين</string>
    <string name="q29_e">Question 29</string>
    <string name="q30">السؤال الثلاثين</string>
    <string name="q30_e">Question 30</string>
    <string name="q31">السؤال الواحد والثلاثون</string>
    <string name="q31_e">Question 31</string>
    <string name="q32">السؤال الثاني والثلاثون</string>
    <string name="q32_e">Question 32</string>
    <string name="q33">السؤال الثالث والثلاثين</string>
    <string name="q33_e">Question 33</string>
    <string name="q34">السؤال الرابع والثلاثين</string>
    <string name="q34_e">Question 34</string>
    <string name="q35">السؤال الخامس والثلاثين</string>
    <string name="q35_e">Question 35</string>
    <string name="q36">السؤال السادس والثلاثين</string>
    <string name="q36_e">Question 36</string>
    <string name="q37">السؤال السابع والثلاثين</string>
    <string name="q37_e">Question 37</string>
    <string name="q38">السؤال الثامن والثلاثين</string>
    <string name="q38_e">Question 38</string>
    <string name="q39">السؤال التاسع والثلاثين</string>
    <string name="q39_e">Question 39</string>
    <string name="q40">السؤال الأربعون</string>
    <string name="q40_e">Question 40</string>
    <string name="text1">اختبار الذكاء العالمي IQ 2016</string>
    <string name="text1_e">Global IQ test in 2016</string>
    <string name="text2">اختبار نيرونت للذكاء مكوّن من 40 اسئلة ذكاء</string>
    <string name="text2_e">Neront test for smart , component of 40 Questions</string>
    <string name="text3">انتبه الاختبار حقيقي و جدّي وليس للترفيه</string>
    <string name="text3_e">Look out the test is real and serious , not to entertain</string>
    <string name="login">أدخل معلوماتك</string>
    <string name="name">أسمك</string>
    <string name="age">عمرك</string>
    <string name="smart">نسبة أعتقادك بذكائك(%)</string>
    <string name="tahqq">التحقق</string>
    <string name="qu1">1 . أسئلة</string>
    <string name="qu2">2 . أسئلة</string>
    <string name="qu3">3 . أسئلة</string>
    <string name="qu4">4 . أسئلة</string>
    <string name="qu5">5 . أسئلة</string>
    <string name="qu6">6 . أسئلة</string>
    <string name="qu7">7 . أسئلة</string>
    <string name="qu8">8 . أسئلة</string>
    <string name="qu9">9 . أسئلة</string>
    <string name="qu10">10 . أسئلة</string>
    <string name="qu11">11 . أسئلة</string>
    <string name="qu12">12 . أسئلة</string>
    <string name="qu13">13 . أسئلة</string>
    <string name="qu14">14 . أسئلة</string>
    <string name="qu15">15 . أسئلة</string>
    <string name="qu16">16 . أسئلة</string>
    <string name="qu17">17 . أسئلة</string>
    <string name="qu18">18 . أسئلة</string>
    <string name="qu19">19 . أسئلة</string>
    <string name="qu20">20 . أسئلة</string>
    <string name="qu21">21 . أسئلة</string>
    <string name="qu22">22 . أسئلة</string>
    <string name="qu23">23 . أسئلة</string>
    <string name="qu24">24 . أسئلة</string>
    <string name="qu25">25 . أسئلة</string>
    <string name="qu26">26 . أسئلة</string>
    <string name="qu27">27 . أسئلة</string>
    <string name="qu28">28 . أسئلة</string>
    <string name="qu29">29 . أسئلة</string>
    <string name="qu30">30 . أسئلة</string>
    <string name="qu31">31 . أسئلة</string>
    <string name="qu32">32 . أسئلة</string>
    <string name="qu33">33 . أسئلة</string>
    <string name="qu34">34 . أسئلة</string>
    <string name="qu35">35 . أسئلة</string>
    <string name="qu36">36 . أسئلة</string>
    <string name="qu37">37 . أسئلة</string>
    <string name="qu38">38 . أسئلة</string>
    <string name="qu39">39 . أسئلة</string>
    <string name="qu40">40 . أسئلة</string>
    <string name="qo2">29 – 27 – 24 – 20 – 15 ما هو الرقم التالي ؟</string>
    <string name="qo4">أي شكل من الأشكال التالية يختلف عن باقي الأشكال ؟</string>
    <string name="qo5"> أي شكل من الأشكال يناسب مكان اشارة الاستفهام ؟</string>
    <string name="qo7"> 2 – 4 – 8 – 16 – 32 – 64 … ما هو التالي ؟</string>
    <string name="qo10">ما هو الشكل الذي يكمل المجموعة ؟</string>
    <string name="qo12">121 – 144 – 169 – 196 ….. ما هو الرقم التالي ؟</string>
    <string name="qo14">أختر الشكل الذي يتناسب مع المقارنة ؟</string>
    <string name="qo15">فأرين اثنين يستطيعان ان يأكلان قطعتين بسكويت في خلال دقيقتين, كم فأراً يلزم ليأكلوا 6 قطع بسكويت خلال فترة 6 دقائق ؟</string>
    <string name="qo16">ما هو الشكل الاكثر اختلافاً عن باقي اشكال المجموعة التالية ؟</string>
    <string name="qo19">لو كنا بعد ساعتين من الان لكان قد بقي من الوقت حتى منتصف الليل نصف ما كان قد بقي لو اننا كنا ساعة واحدة بعد الان . فما هي الساعة الان ؟</string>
    <string name="qo20">1 – 1 – 2 – 3 – 4 – 5 – 8 – 13 – 21 أي من الأرقام التالية لا تنتمي إلي المجموعة ؟</string>
    <string name="qo21">استبعد الشكل الغريب ؟</string>
    <string name="qo23">2 – 10 – 12 – 60 – 62 – 310 ما هو الرقم التالي ؟</string>
    <string name="qo25">ما ري التي عمرها ستة عشر سنة هو أربعة أضعاف عمر أخوها , كم سيكون عمر ماري عندما تكون ضعف عمر أخوها ؟</string>
    <string name="qo26">ما هو الشكل الذي يجب أن يتلو في المجموعة التالية ؟</string>
    <string name="qo27">أربعة عمال يستطيعون بناء حائط خلال ساعة واحدة , كم من الوقت يلزم لخمسة من هؤلاء العمال كي يبنوا ذلك الحائط ؟</string>
    <string name="qo28">5 – 10 – 19 – 32 – 49 – 70 ما هو الرقم التالي ؟</string>
    <string name="qo29">كل هذه الصناديق يمكن فعلا ً عملها من قطعة الكرتون ما عدا واحد , ما هو الصندوق الذي لا يمكن عمله ؟</string>
    <string name="qo30">كل هذه الصناديق يمكن فعلا ً عملها من قطعة الكرتون ما عدا واحد , ما هو الصندوق الذي لا يمكن عمله ؟</string>
    <string name="qo31">اذا علمنا أن خالد يحب الرقم 400 و لكنه لا يحب الرقم 300 , و ايضا ً يحب الرقم 100 ولا يحب الرقم 99 , و يحب 2500 ولا يحب 2600 . إذا أي من الأعداد التالية يحبها خالد ؟</string>
    <string name="qo32">وضعت ثمانية مربعات بحجم مماثل من الورق فوق بعضها البعض على النحو التالي , أي مربع هو الذي في الأسفل ؟</string>
    <string name="qo361">أربعة أشخاص مشتبه بهم ( 1- 2 – 3 – 4 ) تم استجوابهم :</string>
    <string name="qo362">– قال 1 : 3 لن يغش مالم يغش 2 .</string>
    <string name="qo363">– قال 2 : على الأقل 1 أو 2 قد غش .</string>
    <string name="qo364">– قال 3 : 2 لم يغش , أنا الذي غشيت .</string>
    <string name="qo365">– قال 4 : 2 قد غش .</string>
    <string name="qo366">لو علمت أن شخص واحد فقط يكذب , فأي العبارات التالية هي الصحيحة ؟</string>
    <string name="qo38">ما هو رقم الخلية * ( النجمة ) ؟</string>
    <string name="qo40">ما هو الشكل الذي يجب أن يتلو في المجموعة التالية ؟</string>
    <string name="next">التالي</string>
    <string name="title_activity_q39">السؤال التاسع والثلاثين</string>
    <string name="title_activity_q40">السؤال الأربعون</string>
    <string name="title_activity_result">النتيجة (RESULT)</string>
    <string name="result">النتيجة</string>
    <string name="sh">-</string>
    <string name="shhh">-----</string>
    <string name="smartis">نسبة ذكائك هي :</string>
    <string name="settings">إعدادات</string>
    <string name="settings_e">settings</string>
    <string name="fn1">40 سؤال ذكاء</string>
    <string name="fn1_e">40 Smart Question</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="toast">أختبار الذكاء IQ 2015-2016</string>
    <string name="toast_e">IQ Test 2015-2016</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>