<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/number12"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.majdzain.iq.Q12Activity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="430dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/qu12"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bnfsg" />

        <TextView
            android:id="@+id/qtext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:text="@string/qo12"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />

        

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtext2"
            android:layout_centerHorizontal="true" >

            <RadioButton
                android:id="@+id/q12225"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/q12298"
                android:checked="true"
                android:text="225" />

            <RadioButton
                android:id="@+id/q12260"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/q12225"
                android:layout_alignRight="@+id/q12225"
                android:layout_below="@+id/q12225"
                android:text="260" />

            <RadioButton
                android:id="@+id/q12298"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/q12310"
                android:layout_alignParentTop="true"
                android:text="298" />

            <RadioButton
                android:id="@+id/q12310"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="310" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout1"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/anse"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="إنسحاب"
                android:textColor="@color/yellow" />

            <Button
                android:id="@+id/nextq12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:text="@string/next"
                android:textColor="@color/red" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
