<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/number25"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.majdzain.iq.Q25Activity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="429dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/qu25"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bnfsg" />

        <TextView
            android:id="@+id/qtext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:text="@string/qo25"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
        
        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtext2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <RadioButton
                android:id="@+id/q2520"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:checked="true"
                android:text="20" />

            <RadioButton
                android:id="@+id/q2524"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/q2520"
                android:layout_below="@+id/q2520"
                android:text="24" />

            <RadioButton
                android:id="@+id/q2525"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/q2520"
                android:layout_below="@+id/q2524"
                android:text="25" />

            <RadioButton
                android:id="@+id/q2526"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/q2524"
                android:layout_toRightOf="@+id/q2520"
                android:text="26" />

            <RadioButton
                android:id="@+id/q2528"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/q2526"
                android:layout_below="@+id/q2526"
                android:text="28" />

           

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout1"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/anse"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="إنسحاب"
                android:textColor="@color/yellow" />

            <Button
                android:id="@+id/nextq25"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:text="@string/next"
                android:textColor="@color/red" />
        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>